manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82023132"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82023132"
  template:
    metadata:
      labels:
        app: "82023132"
    spec:
      containers:
        - name: "82023132"
          image: ceappacr.azurecr.io/82023132
          ports:
          - containerPort: 8080
