manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-82023132
spec:
    ports:
    - port: 8080 
    selector:
        app: "82023132"
